--- a/work/nurture-life/index.html
+++ b/work/nurture-life/index.html
@@ -7,6 +7,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 	<link href="../../css/style.css" rel="stylesheet">
+	<link href="../../css/slideshow.css" rel="stylesheet">
 	<title>Nurture Life – UX Design Case Study | eCommerce</title>
 	<link rel="icon" href="../../favicon.ico">
 </head>
@@ -274,7 +275,7 @@
 		<div class="w-cont">
 			<div class="flex-col">
 				<div class="col-l marg t-l">
-					<h5 class="section-intro">CX JOURNEY 1</h5>
+					<h5 class="section-intro">DELIVERABLE 01</h5>
 					<h2 class="section-intro">Sign Up Flow:<br>Personalization</h2>
 				</div>
 			</div>
@@ -286,7 +287,7 @@
 						<img class="shad" src="../../media/personalization-1.png" alt="" width="100%">
 					</div>
 					<div class="fl-40 j-fl-st col-l t-l marg">
-						<h2 class="big grey-f">01</h2>
+						<h2 class="big grey-f">1.01</h2>
 						<h2 class="big">Recommended Products</h2>
 						<p>Once a customer has built out a profile, algorithms on the platform can enage in recommdations. New items pleasantly and conveniently presented to customers is an effective use of artificial intellingence in experience design..</p>
 					</div>
@@ -296,7 +297,7 @@
 						<img class="shad" src="../../media/personalization-2.png" alt="" width="100%">
 					</div>
 					<div class="fl-40 j-fl-st col-l t-l marg">
-						<h2 class="big grey-f">02</h2>
+						<h2 class="big grey-f">1.02</h2>
 						<h2 class="big">Registration Form</h2>
 						<p>Once users have ventured into profile creation, a profile form is presented. This iteration is an improvement on the old. Age ranges are presented as choices instead of specific numbers. Dietary restriction items are presented for further product recommendation in the future. And general notes on favored cuisine are also captured.</p>
 					</div>
@@ -304,35 +305,87 @@
 			</div>
 		</div>
 	</section>
-	<section id="outcomes" class="flex-col j-c sec-pad white-f">
+	<section id="outcomes" class="flex-col grey white-f">
+		<div class="flex-col">
+			<div class="w-cont">
+				<div class="marg">
+					<h2 class="big grey-f">1.03</h2>
+					<h2 class="big">Recommendations, Sign Up, and Personalization</h2>
+					<p>If a customer desires to sign up within the checkout process, a prompt is situated here.<br>This nudging within the checkout allows users who are warming to have a chance at signing up.</p>
+				</div>
+				<div class="flex-col marg" style="margin-top: 3rem;">
+					<div class="scroll-container">
+						<div class="progress-bar">
+							<div class="progress-fill" id="progress"></div>
+						</div>
+						<div class="scroll-cards-box" id="scrollBox">
+							<div class="scroll-card"><img src="../../media/sign-up-personal-1.png" width="100%" alt=""></div>
+							<div class="scroll-card"><img src="../../media/sign-up-personal-2.png" width="100%" alt=""></div>
+							<div class="scroll-card"><img src="../../media/sign-up-personal-3.png" width="100%" alt=""></div>
+							<div class="scroll-card"><img src="../../media/sign-up-personal-4.png" width="100%" alt=""></div>
+							<div class="scroll-card"><img src="../../media/sign-up-personal-5.png" width="100%" alt=""></div>
+							<div class="scroll-card"><img src="../../media/sign-up-personal-6.png" width="100%" alt=""></div>
+							<div class="scroll-card"><img src="../../media/sign-up-personal-7.png" width="100%" alt=""></div>
+							<div class="scroll-card"><img src="../../media/sign-up-personal-8.png" width="100%" alt=""></div>
+						</div>
+						<div class="buttons-box">
+						<button id="leftBtn">
+							<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="white">
+							<path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z" />
+							</svg>
+						</button>
+						<button id="rightBtn">
+							<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="white">
+							<path d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6z" />
+							</svg>
+						</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="outcomes" class="flex-col j-c grey sec-pad white-f">
 		<div class="w-cont">
 			<div class="flex-col">
 				<div class="col-l marg t-l">
-					<h5 class="section-intro">CX JOURNEY 2</h5>
+					<h5 class="section-intro">DEIVERABLE 2</h5>
 					<h2 class="section-intro">Buy Now + Create Account</h2>
 				</div>
 			</div>
 		</div>
 		<div class="flex-col">
 			<div class="w-cont">
-				<div class="flex-box-rev al-c">
-					<div class="fl-60 col-r marg">
-						<img class="shad" src="../../media/buy-now-create-account-1.png" alt="" width="100%">
-					</div>
-					<div class="fl-40 j-fl-st col-l t-l marg">
-						<h2 class="big grey-f">01</h2>
-						<h2 class="big">One-Time Click</h2>
-						<p>In order to entice users who are more agnostic or anonymous, one click to buy options are presented on products. This allows newcomers to get situated in the ecosystem and try Nurture Life products.</p>
-					</div>
+				<div class="marg">
+					<h2 class="big grey-f">2.01</h2>
+					<h2 class="big">One-Time Click to Account Creation</h2>
+					<p>If a customer desires to sign up within the checkout process, a prompt is situated here.<br>This nudging within the checkout allows users who are warming to have a chance at signing up.</p>
+					<p>In order to entice users who are more agnostic or anonymous, one click to buy options are presented on products. This allows newcomers to get situated in the ecosystem and try Nurture Life products.</p>
 				</div>
-				<div class="flex-box-rev al-c">
-					<div class="fl-60 col-r marg">
-						<img class="shad" src="../../media/buy-now-create-account-2.png" alt="" width="100%">
-					</div>
-					<div class="fl-40 j-fl-st col-l t-l marg">
-						<h2 class="big grey-f">02</h2>
-						<h2 class="big">Account Creation</h2>
-						<p>If a customer desires to sign up within the checkout process, a prompt is situated here. This nudging within the checkout allows users who are warming to have a chance at signing up.</p>
+				<div class="flex-col marg" style="margin-top: 3rem;">
+					<div class="scroll-container">
+						<div class="progress-bar">
+							<div class="progress-fill" id="progress1"></div>
+						</div>
+						<div class="scroll-cards-box" id="scrollBox1">
+							<div class="scroll-card"><img src="../../media/buy-now-create-account-1.png" width="100%" alt=""></div>
+							<div class="scroll-card"><img src="../../media/buy-now-create-account-2.png" width="100%" alt=""></div>
+							<div class="scroll-card"><img src="../../media/buy-now-create-account-3.png" width="100%" alt=""></div>
+							<div class="scroll-card"><img src="../../media/buy-now-create-account-4.png" width="100%" alt=""></div>
+							<div class="scroll-card"><img src="../../media/buy-now-create-account-5.png" width="100%" alt=""></div>
+						</div>
+						<div class="buttons-box">
+						<button id="leftBtn1">
+							<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="white">
+							<path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z" />
+							</svg>
+						</button>
+						<button id="rightBtn1">
+							<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="white">
+							<path d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6z" />
+							</svg>
+						</button>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -342,7 +395,7 @@
 		<div class="w-cont">
 			<div class="flex-col">
 				<div class="col-l marg t-l">
-					<h5 class="section-intro">CX JOURNEY 3</h5>
+					<h5 class="section-intro">DELIVERABLE 3</h5>
 					<h2 class="section-intro">Guest Checkout</h2>
 				</div>
 			</div>
@@ -354,7 +407,7 @@
 						<img class="shad" src="../../media/guest-checkout-1.png" alt="" width="100%">
 					</div>
 					<div class="fl-40 j-fl-st col-l t-l marg">
-						<h2 class="big grey-f">01</h2>
+						<h2 class="big grey-f">3.01</h2>
 						<h2 class="big">Anonymous Checkout</h2>
 						<p>If a customer wants nothing to do with sign up, they can simply guest checkout.</p>
 					</div>
@@ -364,9 +417,45 @@
 						<img class="shad" src="../../media/guest-checkout-2.png" alt="" width="100%">
 					</div>
 					<div class="fl-40 j-fl-st col-l t-l marg">
-						<h2 class="big grey-f">02</h2>
+						<h2 class="big grey-f">3.02</h2>
 						<h2 class="big">No Strings Attached</h2>
-						<p>One click checkout leads users to fill out their nilling and shipping info and compelete the transaciton. This process is quick--offering three clicks over two screens, and bypassing the entire account creation scenario.</p>
+						<p>One click checkout leads users to fill out their billing and shipping info and compelete the transaction. This process is quick, offering three clicks over two screens, and bypassing the entire account creation scenario.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="outcomes" class="flex-col grey white-f">
+		<div class="flex-col">
+			<div class="w-cont">
+				<div class="marg">
+					<h2 class="big grey-f">3.03</h2>
+					<h2 class="big">Three Clicks to Buy</h2>
+					<p>Customers can quickly speed through the checkout process if they simply wish to buy a produxt, try it out, and not sign up.</p>
+				</div>
+				<div class="flex-col marg" style="margin-top: 3rem;">
+					<div class="scroll-container">
+						<div class="progress-bar">
+							<div class="progress-fill" id="progress2"></div>
+						</div>
+						<div class="scroll-cards-box" id="scrollBox2">
+							<div class="scroll-card"><img src="../../media/buy-now-guest-1.png" width="100%" alt=""></div>
+							<div class="scroll-card"><img src="../../media/buy-now-guest-2.png" width="100%" alt=""></div>
+							<div class="scroll-card"><img src="../../media/buy-now-guest-3.png" width="100%" alt=""></div>
+							<div class="scroll-card"><img src="../../media/buy-now-guest-4.png" width="100%" alt=""></div>
+						</div>
+						<div class="buttons-box">
+						<button id="leftBtn2">
+							<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="white">
+							<path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z" />
+							</svg>
+						</button>
+						<button id="rightBtn2">
+							<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="white">
+							<path d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6z" />
+							</svg>
+						</button>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -383,16 +472,16 @@
 				</div>
 				<div class="flex-box">
 					<div class="fl-33 marg">
-						<h4>Efficiency Boost</h4>
-						<p>"I spend more time completing work<br>and less time managing HOW to do that work."</p>
+						<h4>3 Unique Flows</h4>
+						<p>Different Customer Experience Journeys can be fine tuned to attracgt and retain different market segments.</p>
 					</div>
 					<div class="fl-33 marg">
-						<h4>Visibility Increase</h4>
-						<p>"Where projects and tasks are at on the pike is much, much clearer now."</p>
+						<h4>Increase in Sales</h4>
+						<p>NL was previously missing a huge opporunity for business by restricitng all sales to account subscription plans.</p>
 					</div>
 					<div class="fl-33 marg">
-						<h4>10+	</h4>
-						<p>hrs saved weekly per manager</p>
+						<h4>Redesigned Homepage</h4>
+						<p>A comprehensive webpage employs different tactical segmentation opportunities to entice differnt kinds of customers--the timid 1-time shoppers to the dive-in subscribers.</p>
 					</div>
 				</div>
 			</div>
@@ -403,21 +492,21 @@
 				<div class="flex-box">
 					<div class="fl-50 j-fl-st col-l marg t-l">
 						<h5>REFLECTIVE</h5>
-						<h2>Reviewing the Work</h2>
-						<p>Let's take a moment to reflect on how the journey of this design and development shook out. All in all, I was happy with this project, and so were my bosses!
+						<h2>Looking Back</h2>
+						<p>A chance for reflection on this past work allows me to grow in the present and future of my design work.</p>
 					</div>
 					<div class="fl-50 col-r marg">
 						<div class="blue-call">
-							<h4>Favorite Part</h4>
-							<p>The implementation for an editable grid with inputs on each field (User Form Priorities) came from an internal component within Power Apps. Finding this really helped materialize my dream for the app.</p>
+							<h4>Best Part</h4>
+							<p>It was really fun to do ad-hoc research work for this (secondary eCommerce research, pain point identfication, and quick-and-dirty interviews.) Aligning my design work across different segmented tactics was also a stroong exercise because I could define essentially three different users profiles and still manage business goals around each one.</p>
 						</div>
 						<div class="blue-call">
-							<h4>Hindsight is 20/20</h4>
-							<p>Straying outside of user stories and scoping marginal feature updates is extremely easy to do, but delays the delivery of essential implementations. Something of which to be wary.</p>
+							<h4>Do Something Different</h4>
+							<p>What I would improve about this project probably falls down to further benefits for personalization. I'd like to have designed what benefits could be designed for access only after a customer subscribes with an account. It would be cool to show breadcrumbs of those via small marketing or ad targets ad entice customers to sign up better. I thinnk that was a missing piece.</p>
 						</div>
 						<div class="blue-call">
-							<h4>Up Next</h4>
-							<p>The component for a visual file repository within the Individual Task View was removed due to issues with the existing Power Apps Component Framework (widget). Some development work in JavaScript will be forthcoming on that.</p>
+							<h4>Coming Up</h4>
+							<p>Were I to continue this project I might consider building out a front-end shop experience in React to see how these experiences feel. In design I'd also like to explore the aforementioned ideas about member perks--how could I advertise and build small micro-enticements or gamified rewards that customers could achieve after signiing up with an account.</p>
 						</div>
 					</div>
 				</div>
@@ -478,5 +567,29 @@
 		</div>
 	</footer>
 	<script src="../../js/sticky-nav.js"></script>
+	    <script>
+        function setupScroll(boxId, leftBtnId, rightBtnId, progressId) {
+            const box = document.getElementById(boxId);
+            const leftBtn = document.getElementById(leftBtnId);
+            const rightBtn = document.getElementById(rightBtnId);
+            const progress = document.getElementById(progressId);
+
+            const updateProgress = () => {
+            const total = box.scrollWidth - box.clientWidth;
+            progress.style.width = (box.scrollLeft / total) * 100 + '%';
+            };
+
+            const slide = () => box.querySelector('.scroll-card')?.clientWidth || 0;
+
+            leftBtn.onclick = () => box.scrollBy({ left: -slide() });
+            rightBtn.onclick = () => box.scrollBy({ left: slide() });
+            box.addEventListener('scroll', updateProgress);
+            window.addEventListener('resize', updateProgress);
+        }
+
+        setupScroll('scrollBox', 'leftBtn', 'rightBtn', 'progress');
+        setupScroll('scrollBox1', 'leftBtn1', 'rightBtn1', 'progress1');
+		setupScroll('scrollBox2', 'leftBtn2', 'rightBtn2', 'progress2');
+    </script>
 </body>
 </html>
