--- a/work/rita-cms/index.html
+++ b/work/rita-cms/index.html
@@ -80,12 +80,12 @@
 			</div>
 		</div>
 	</section>
-	<section id="hero" class="flex-col white sec-pad">
+	<section id="hero" class="flex-col white sec-pad grey">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
 					<div class="marg">
-						<img class="shad" src="../../media/rita-cms-thumb.png" alt="" width="100%">
+						<img class="shad" src="../../media/rita-cms-spread.png" alt="" width="100%">
 					</div>
 				</div>
 			</div>
@@ -145,7 +145,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="research" class="flex-col grey">
+	<section id="research" class="flex-col grey white-f sec-pad">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
@@ -157,7 +157,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="pain-points" class="flex-col j-c">
+	<section id="pain-points" class="flex-col j-c sec-pad">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-col">
@@ -200,7 +200,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="research" class="flex-col grey">
+	<section id="design" class="flex-col grey white-f sec-pad">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
@@ -212,7 +212,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="pain-points" class="flex-col j-c">
+	<section id="artifacts" class="flex-col j-c sec-pad">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-col">
@@ -255,7 +255,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="research" class="flex-col grey">
+	<section id="deliverable" class="flex-col grey white-f sec-pad">
 		<div class="flex-col">
 			<div class="w-cont">
 				<div class="flex-box">
