--- a/work/united-cargo/index.html
+++ b/work/united-cargo/index.html
@@ -326,7 +326,7 @@
 				<div class="flex-box">
 					<div class="marg">
 						<h4>RESULTS</h4>
-						<h2 class="big">Core Design Accomplishments</h2>
+						<h2 class="big">Top Accomplishments</h2>
 					</div>
 				</div>
 				<div class="flex-box">
