--- a/about/index.html
+++ b/about/index.html
@@ -126,8 +126,8 @@
 		<div class="w-cont">
 			<div class="flex-col">
 				<div class="col-l marg t-l">
-					<h5 class="section-intro">Development</h5>
-					<h2 class="section-intro">User-Focused Features</h2>
+					<h5 class="section-intro">Design Journey</h5>
+					<h2 class="section-intro">How I Got Here</h2>
 				</div>
 			</div>
 		</div>
@@ -135,33 +135,33 @@
 			<div class="w-cont">
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="../media/holder-5.png" alt="" width="100%">
+						<img class="shad" src="../media/by-design.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">01</h2>
-						<h2 class="big">Tireless Attention to Detail</h2>
+						<h2 class="big">By Design?</h2>
 						<p>Things pop out at me and they don’t shut up: a pixel out of place, a misspelled word, or mismatched shades of black. Code doesn’t run with missing keystrokes.</p>
 						<p>Laser-focused precision and a sensitivity to what feels natural allow me to deliver robust experiences that flow elegantly and fit the user’s needs, rather than the contrary.</p>
 					</div>
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="../media/holder-5.png" alt="" width="100%">
+						<img class="shad" src="../media/learning-the-ropes.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">02</h2>
-						<h2 class="big">Pivot Quickly</h2>
+						<h2 class="big">Learning the Ropes</h2>
 						<p>Cross-disciplinary teams deliver stronger products because they contain diverse perspectives, but success depends on their ability to adapt.</p>
 						<p>When design spaces become ambiguous on these teams, I prioritize open-minded exploration and the willingness to create differently.</p>
 					</div>
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="../media/holder-5.png" alt="" width="100%">
+						<img class="shad" src="../media/practitioner.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">03</h2>
-						<h2 class="big">Light Up the Room</h2>
+						<h2 class="big">Practitioner</h2>
 						<p>Forty hours in an office per week is a long time. I’ve been told that places were dead before I got there. Frankly,  it's due to the simple fact that I can’t handle the quiet for too long. Of course--I also like to have fun.</p>
 						<p>With me in the room you’ll have no short supply of quick wit, dry humor, and cheeky banter.</p>
 					</div>
@@ -177,7 +177,7 @@
 				</div>
 				<div class="flex-box-rev">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="../media/place-square.png" alt="" width="100%">
+						<img class="shad" src="../media/jcma-card.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-c col-l marg t-l">
 						<h2>Marketing Websites</h2>
@@ -187,7 +187,7 @@
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="../media/place-square.png" alt="" width="100%">
+						<img class="shad" src="../media/committees.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-c col-r marg t-l">
 						<h2>WordPress + Power Apps</h2>
@@ -197,7 +197,7 @@
 				</div>
 				<div class="flex-box-rev al-c">
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="../media/place-square.png" alt="" width="100%">
+						<img class="shad" src="../media/web-apps.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-l marg t-l">
 						<h2>Web Apps</h2>
