--- a/work/rita-cms/index.html
+++ b/work/rita-cms/index.html
@@ -98,47 +98,47 @@
 					<div class="fl-50 j-fl-st col-l marg t-l">
 						<h5>The Product</h5>
 						<h2>Rita CMS powers up your club membership.</h2>
-						<p>Erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Magna fermentum iaculis eu non diam phasellus vestibulum lorem sed. Netus et malesuada fames ac turpis egestas integer eget aliquet. Varius duis at consectetur lorem donec massa sapien. Molestie at elementum eu facilisis sed odio morbi.</p>
+						<p>Rita CMS is a WordPress App that connects with Microsoft Power Apps for back-end functionality.</p>
 					</div>
 					<div class="fl-50 col-r marg">
 						<div class="blue-call">
 							<h4>The problem</h4>
-							<p>Erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Magna fermentum iaculis eu.</p>
+							<p>This project originally started as a rescue mission. My boss belongs to our town's Kiwanis chapter. From a national organization level, their current platform was being shut down.</p>
 						</div>
 						<div class="blue-call">
 							<h4>The solution</h4>
-							<p>Erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Magna fermentum iaculis eu.</p>
+							<p>Joe (my boss) and I stepped in to migrate Kiwanis data to a Microsoft Power Apps environment with Dataverse and then build out a completely custom front-end web app tailored to this club's needs.</p>
 						</div>
 					</div>
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="../../media/place-square.png" alt="" width="100%">
+						<img class="shad" src="../../media/kiwanis-card.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h5>Context</h5>
-						<h2>I made sure that this piece of the project went extremely successfully.</h2>
-						<p>Erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Magna fermentum iaculis eu non diam phasellus vestibulum lorem sed. Netus et malesuada fames ac turpis egestas integer eget aliquet. Varius duis at consectetur lorem donec massa sapien. Molestie at elementum eu facilisis sed odio morbi.</p>
+						<h2>A custom, responsive WordPress app for club membership management.</h2>
+						<p>Serving as the pioneering user group, the Valparaiso Noon Kiwanis club of 300+ members were the first give Rita CMS life. Kiwanis engages in community outreach programs, fundraising, accesible platform construction, house rehab, and exciting things that give back. The club uses the app to share files, create events and meetings, manage membership, use internal messaging, and much more.</p>
 					</div>
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-50 j-fl-st col-l marg t-l">
 						<h5>Persona</h5>
-						<h2>I made sure that this piece of the project went extremely successfully.</h2>
-						<p>Erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Magna fermentum iaculis eu non diam phasellus vestibulum lorem sed. Netus et malesuada fames ac turpis egestas integer eget aliquet. Varius duis at consectetur lorem donec massa sapien. Molestie at elementum eu facilisis sed odio morbi.</p>
+						<h2>Professionals, retirees, volunteers, and disable veterans.</h2>
+						<p>Most of the users of Rita CMS are older aged, like 55+ and some of the oldest in late 80s. With againg comes a different ocular and motor experience of technology. However, the age range is varied. There are also younger folks. Outside of Noon Kiwanis, the Disabled American Veterans Chapter 80 of Indiana also uses Rita CMS. These folsk as you can imagine have differences in user experience. These challenges present a unique design opportunity.</p>
 					</div>
 					<div class="fl-50 col-r marg">
-						<img class="shad" src="../../media/place-square.png" alt="" width="100%">
+						<img class="shad" src="../../media/retirees.png" alt="" width="100%">
 					</div>
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="../../media/place-square.png" alt="" width="100%">
+						<img class="shad" src="../../media/teck-stack.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l">
 						<h5>Tech Stack</h5>
-						<h2>I made sure that this piece of the project went extremely successfully.</h2>
-						<p>Erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Magna fermentum iaculis eu non diam phasellus vestibulum lorem sed. Netus et malesuada fames ac turpis egestas integer eget aliquet. Varius duis at consectetur lorem donec massa sapien. Molestie at elementum eu facilisis sed odio morbi.</p>
+						<h2>Power Apps for back-end, WordPress + PHP for front end, and DataPress API in the middle.</h2>
+						<p>Rita CMS is built on a unique stack: Power Apps provides a friendly approach to database management. Using WooCommerce for user authentication, our team is able to extend this security level to develop cutom PHP endpoints inside. Using FetchXML and Twig templating, data is queried from Dataverse and then used to populate the WordPress front-end. I spent considerable time in this project working with all technologies listed and directly developing my wireframes with HTML, CSS, and PHP.</p>
 					</div>
 				</div>
 			</div>
@@ -150,8 +150,8 @@
 			<div class="w-cont">
 				<div class="flex-box">
 					<div class="marg">
-						<h5>RESEARCH APPROACH</h5>
-						<h2 class="big">I made sure that this piece of the project went extremely successfully.</h2>
+						<h5>USER REQUIREMENTS</h5>
+						<h2 class="big">Joe and engaged in interviews and brainstorming session with Kiwanis to define key needs that Rita CMS needs to robustly perform.</h2>
 					</div>
 				</div>
 			</div>
@@ -162,39 +162,39 @@
 			<div class="w-cont">
 				<div class="flex-col">
 					<div class="col-l marg t-l" style="padding-top: 0px;">
-						<h5 class="section-intro">PAIN POINTS</h5>
-						<h2 class="section-intro">Cumbersome Prioritization</h2>
+						<h5 class="section-intro">REQUIREMENTS</h5>
+						<h2 class="section-intro">Elegant Admin Experience</h2>
 					</div>
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="../../media/shorter-place.png" alt="" width="100%">
+						<img class="shad" src="../../media/accessible-user-interface.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
-						<h3>Clunky UI affordances</h3>
-						<p>Depending on your bias, there are a few ways to look at AI. In CX, our best intentions are in understanding how generative and algorithmic agents can integrate into our site to most effectively aid the user journey. Where along the customer journey can AI tools fill in gaps to surprise people, save their time, and provide clarity?</p>
-					</div>
-				</div>
-			</div>
-			<div class="w-cont">
-				<div class="flex-box al-c">
-					<div class="fl-50 col-l marg">
-						<img class="shad" src="../../media/shorter-place.png" alt="" width="100%">
-					</div>
-					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
-						<h3>External tool reliance</h3>
-						<p>Depending on your bias, there are a few ways to look at AI. In CX, our best intentions are in understanding how generative and algorithmic agents can integrate into our site to most effectively aid the user journey. Where along the customer journey can AI tools fill in gaps to surprise people, save their time, and provide clarity?</p>
+						<h3>Accesible, intuive user interface</h3>
+						<p>The app's user interface needed to be accessible by multiple different kinds of user groups with different needs. To accomplish this goal, I endeadvored to create a design system that was sleek, easy, and comfortable to use. The system employs comfrtable colors of light blues, navys, and whites. I avoided anything that would be hard to see or affect colorblindness. In addition, I used lots of rounded edges, largers buttons, and larger, bold fonts.</p>
 					</div>
 				</div>
 			</div>
 			<div class="w-cont">
 				<div class="flex-box al-c">
 					<div class="fl-50 col-l marg">
-						<img class="shad" src="../../media/shorter-place.png" alt="" width="100%">
+						<img class="shad" src="../../media/cross-device-responsivity.png" alt="" width="100%">
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
-						<h3>Lack of state awareness</h3>
-						<p>Depending on your bias, there are a few ways to look at AI. In CX, our best intentions are in understanding how generative and algorithmic agents can integrate into our site to most effectively aid the user journey. Where along the customer journey can AI tools fill in gaps to surprise people, save their time, and provide clarity?</p>
+						<h3>Cross-device responsivity</h3>
+						<p>With lots of different users on different browsers, iPhones, Androids, PCs, Macs, and whatever else... I put forth a crazy attention to detail on ensuring that Rita CMS works in all these contexts. I employed flexbox, grid, and CSS media queries to endlessly polish smooth-flowing layouts that fit every context.</p>
+					</div>
+				</div>
+			</div>
+			<div class="w-cont">
+				<div class="flex-box al-c">
+					<div class="fl-50 col-l marg">
+						<img class="shad" src="../../media/easy-admin-database.png" alt="" width="100%">
+					</div>
+					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
+						<h3>Easy database access for admins</h3>
+						<p>Given the nature of Power Apps and its friendly, approachable, low-code environment, those adminisators who need to access data and move things who have non-technical backgrounds have a powerful and easy approach to access and manage the data they need.</p>
 					</div>
 				</div>
 			</div>
@@ -206,7 +206,7 @@
 				<div class="flex-box">
 					<div class="marg">
 						<h5>TECHNOLOGY</h5>
-						<h2 class="big">I made sure that this piece of the project went extremely successfully.</h2>
+						<h2 class="big">Fetch queries, caching, output buffering, looping, and more. I developed a lot of core skills in web functionality working on my first major full-stack web app.</h2>
 					</div>
 				</div>
 			</div>
@@ -217,38 +217,38 @@
 			<div class="w-cont">
 				<div class="flex-col">
 					<div class="col-l marg t-l" style="padding-top: 0px;">
-						<h5 class="section-intro">TECH STACK</h5>
-						<h2 class="section-intro">Cumbersome Prioritization</h2>
+						<h5 class="section-intro">TECH TOOLS</h5>
+						<h2 class="section-intro">Modern, Flexible WordPress App</h2>
 					</div>
 				</div>
 				<div class="flex-box al-c">
-					<div class="fl-50 col-l marg">
+					<div class="fl-60 marg">
 						<img class="shad" src="../../media/shorter-place.png" alt="" width="100%">
 					</div>
-					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
-						<h3>Clunky UI affordances</h3>
+					<div class="fl-40 j-fl-st col-r marg t-l" style="padding-top: 0px;">
+						<h3>FetchXML for data retrieval</h3>
 						<p>Depending on your bias, there are a few ways to look at AI. In CX, our best intentions are in understanding how generative and algorithmic agents can integrate into our site to most effectively aid the user journey. Where along the customer journey can AI tools fill in gaps to surprise people, save their time, and provide clarity?</p>
 					</div>
 				</div>
 			</div>
 			<div class="w-cont">
 				<div class="flex-box al-c">
-					<div class="fl-50 col-l marg">
+					<div class="fl-60 marg">
 						<img class="shad" src="../../media/shorter-place.png" alt="" width="100%">
 					</div>
-					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
-						<h3>External tool reliance</h3>
+					<div class="fl-40 j-fl-st col-r marg t-l" style="padding-top: 0px;">
+						<h3>Query string parameters</h3>
 						<p>Depending on your bias, there are a few ways to look at AI. In CX, our best intentions are in understanding how generative and algorithmic agents can integrate into our site to most effectively aid the user journey. Where along the customer journey can AI tools fill in gaps to surprise people, save their time, and provide clarity?</p>
 					</div>
 				</div>
 			</div>
 			<div class="w-cont">
 				<div class="flex-box al-c">
-					<div class="fl-50 col-l marg">
+					<div class="fl-60 marg">
 						<img class="shad" src="../../media/shorter-place.png" alt="" width="100%">
 					</div>
-					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
-						<h3>Lack of state awareness</h3>
+					<div class="fl-40 j-fl-st col-r marg t-l" style="padding-top: 0px;">
+						<h3>Customizable PHP endpoints</h3>
 						<p>Depending on your bias, there are a few ways to look at AI. In CX, our best intentions are in understanding how generative and algorithmic agents can integrate into our site to most effectively aid the user journey. Where along the customer journey can AI tools fill in gaps to surprise people, save their time, and provide clarity?</p>
 					</div>
 				</div>
@@ -261,7 +261,7 @@
 				<div class="flex-box">
 					<div class="marg">
 						<h5>DELIVERABLE</h5>
-						<h2 class="big">With prototypes approved, I implemented new data fields, views, and editable forms in the Power Apps environment.</h2>
+						<h2 class="big">I developed a custom app with over 80 modular endpoints. Users interact with a fully functional interface and update club data in real time. I've highlighted key functionality areas below.</h2>
 					</div>
 				</div>
 			</div>
@@ -322,16 +322,16 @@
 				</div>
 				<div class="flex-box">
 					<div class="fl-33 marg">
-						<h4>Efficiency Boost</h4>
+						<h4>Custom Full-Stack WordPress App</h4>
 						<p>"I spend more time completing work<br>and less time managing HOW to do that work."</p>
+					</div>
+					<div class="fl-33 marg">
+						<h4>400+</h4>
+						<p>active users across three different organizations</p>
 					</div>
 					<div class="fl-33 marg">
 						<h4>Visibility Increase</h4>
 						<p>"Where projects and tasks are at on the pike is much, much clearer now."</p>
-					</div>
-					<div class="fl-33 marg">
-						<h4>10+	</h4>
-						<p>hrs saved weekly per manager</p>
 					</div>
 				</div>
 			</div>
